add model migration and simple test for a Task

--- a/.env.behat
+++ b/.env.behat
@@ -1,1 +1,7 @@
-APP_ENV=acceptance
+APP_ENV=testing
+APP_DEBUG=true
+APP_HOST=http://pet-project.local
+APP_KEY=TcqTXRLRsXVJeEgbiAgk8NwtEvQTiIbc
+DB_DEFAULT=sqlite_testing
+CACHE_DRIVER=file
+SESSION_DRIVER=file
