add behat testing

--- a/.env.behat
+++ b/.env.behat
@@ -1,6 +1,6 @@
 APP_ENV=testing
 APP_DEBUG=true
-APP_HOST=http://pet-project.local
+APP_HOST=http://papil.local
 APP_KEY=TcqTXRLRsXVJeEgbiAgk8NwtEvQTiIbc
 
 DB_CONNECTION=sqlite_testing
