change column names and update the test cases

--- a/.env.behat
+++ b/.env.behat
@@ -1,9 +1,15 @@
 APP_ENV=testing
 APP_DEBUG=true
-APP_HOST=http://papil.local
+APP_HOST=http://pet-project.local
 APP_KEY=TcqTXRLRsXVJeEgbiAgk8NwtEvQTiIbc
 
-DB_CONNECTION=sqlite_testing
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=pet_project
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
